--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,19 +7,22 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: About me
+    url: '#about'
+    weight: 10
+  - name: Awards
+    url: '#posts' # todo update
     weight: 20
   - name: Projects
-    url: '#projects'
+    url: '#project'
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
-  - name: Publications
+  - name: Professional experience
     url: '#featured'
+    weight: 40
+  - name: Posts
+    url: '#posts'
     weight: 50
-  - name: Contact
+  - name: studies
     url: '#contact'
     weight: 60
 
