update small changes

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -6,24 +6,24 @@
 main:
   - name: Home
     url: '#about'
-    weight: 10
+    weight: 5
   - name: About me
     url: '#about'
     weight: 10
   - name: Awards
-    url: '#posts' # todo update
+    url: '#accomplishments' # todo update
     weight: 20
   - name: Projects
-    url: '#project'
+    url: '#projects'
     weight: 30
   - name: Professional experience
-    url: '#featured'
+    url: '#experience'
     weight: 40
   - name: Posts
     url: '#posts'
     weight: 50
   - name: studies
-    url: '#contact'
+    url: '#study'
     weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
