gravatar set false

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -74,7 +74,7 @@ features:
     content_dir: content
     branch: main
   avatar:
-    gravatar: true
+    gravatar: false
     shape: circle
 #  comment:
 #    provider: ''
