add awards in menu

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#about'
     weight: 10
   - name: Awards
-    url: '#accomplishments' # todo update
+    url: '#awards'
     weight: 20
   - name: Projects
     url: '#projects'
